--- a/public/index.html
+++ b/public/index.html
@@ -15,14 +15,14 @@
     <script src="models/Point.js" type="text/javascript"></script>
     <script src="models/Missle.js" type="text/javascript"></script>
     <script src="models/Tank.js" type="text/javascript"></script>
-    <script type="text/javascript" src="sketch.js"></script>
+    <script src="models/User.js" type="text/javascript"></script>
 
     <style>
         body {
             font-weight: bold;
             margin: 0;
             padding: 0;
-            /* text-align: center */
+            text-align: center;
         }
         
         #container {
@@ -36,24 +36,34 @@
 </head>
 
 <body>
-    <div>
-        <h1>Tank Game</h1>
-    </div>
-    <div class="table text-center">
-        <table class="table table-striped">
-            <tr>
-                <th>Kills</th>
-                <th>Deaths</th>
-            </tr>
+    <div class=" container ">
+        <span class="">
+                <h1 style="padding-right: 22px">Tank Game </h1>
+                <p>Arrow keys to move, click to shoot!</p>
+        </span>
+        <p class="lead" id="matchup"></p>
 
-            <tr>
-                <td id="kills">0</td>
-                <td id="deaths">0</td>
-            </tr>
-
-        </table>
     </div>
-    <section class="container-fluid" style="text-align: center">
+
+    <div id="start">
+
+    </div>
+    <section id="game" class="col-sm-12 col-md-12 container-fluid" style="text-align: center">
+
+        <div class="table text-center" style="margin:0px">
+            <table class="table col-lg-6  table-striped center" style="margin: 0px auto">
+                <tr>
+                    <th>Kills</th>
+                    <th>Deaths</th>
+                </tr>
+                <tr>
+                    <td id="kills">0</td>
+                    <td id="deaths">0</td>
+                </tr>
+
+            </table>
+        </div>
+
         <div class="col-lg-6" style="text-align: center;margin: auto">
             <div class="progress" style="text-align: center; margin: auto">
                 <div id="oHealth" class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width:100%">
@@ -61,6 +71,8 @@
                 </div>
             </div>
         </div>
+
+
         <div class=" " id="Container">
             <!-- CANVAS  -->
         </div>
@@ -74,6 +86,8 @@
 
     </section>
 
+    <script type="text/javascript" src="app.js"></script>
+    <script type="text/javascript" src="sketch.js"></script>
 
 </body>
 
