--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,9 @@
 </head>
 
 <body>
+    <section id="gamesection">
+
+    </section>
     <div class=" container ">
         <span class="">
                 <h1 style="padding-right: 22px">Tank Game </h1>
@@ -85,6 +88,7 @@
 
 
     </section>
+
 
     <script type="text/javascript" src="app.js"></script>
     <script type="text/javascript" src="sketch.js"></script>
