--- a/public/index.html
+++ b/public/index.html
@@ -12,41 +12,66 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
+    <!-- Firebase -->
+    <script src="https://cdn.firebase.com/libs/firebaseui/3.4.1/firebaseui.js"></script>
+    <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.4.1/firebaseui.css" />
     <script src="models/Point.js" type="text/javascript"></script>
     <script src="models/Missle.js" type="text/javascript"></script>
     <script src="models/Tank.js" type="text/javascript"></script>
     <script src="models/User.js" type="text/javascript"></script>
-
-    <style>
-        body {
-            font-weight: bold;
-            margin: 0;
-            padding: 0;
-            text-align: center;
-        }
-        
-        #container {
-            text-align: center
-        }
-        
-        section {
-            text-align: center
-        }
-    </style>
+    <link type="text/css" rel="stylesheet" href="css/styles.css" />
 </head>
 
 <body>
+    <section id="title">
+        <div class=" container ">
+            <a class="float-right" id="logout">logout</a>
+            <span class="">
+                            <h1 style="padding-right: 22px">Tank Game </h1>
+                            <p>Arrow keys to move, click to shoot!</p>
+                    </span>
+            <p class="lead" id="matchup"></p>
+
+        </div>
+    </section>
+    <!-- if not logged in -->
+    <section id="authentication">
+        <section id="login">
+            <div class="loginmodal-container">
+                <h1>Login to Your Account</h1><br>
+                <form>
+                    <input id="aemail" type="email" name="loginuser" required placeholder="Email">
+                    <input id="apassword" type="password" name="loginpass" required placeholder="Password">
+                </form>
+                <input type="button" id="authenticate" name="login" id="newlogin" class="login loginmodal-submit" value="Login">
+
+
+                <div class="login-help">
+                    <a class="text-center lead" id="regbtn" href="#">Register</a>
+                </div>
+            </div>
+        </section>
+        <section id="register" style="display:none">
+            <div class="loginmodal-container">
+                <h1>Register Account</h1><br>
+                <form>
+                    <input id="cname" type="text" name="name" placeholder="Name" required>
+                    <input id="cemail" type="email" name="user" placeholder="Email" required>
+                    <input id="cpw" type="password" name="pass" placeholder="Password" required>
+                </form>
+                <input type="button" id="caccount" name="register" id="newreg" class="login loginmodal-submit" value="Register">
+
+                <div class="login-help">
+                    <a class="text-center lead" id="logbtn" href="#">Login</a>
+                </div>
+            </div>
+        </section>
+
+    </section>
     <section id="gamesection">
 
     </section>
-    <div class=" container ">
-        <span class="">
-                <h1 style="padding-right: 22px">Tank Game </h1>
-                <p>Arrow keys to move, click to shoot!</p>
-        </span>
-        <p class="lead" id="matchup"></p>
 
-    </div>
 
     <div id="start">
 
@@ -88,7 +113,19 @@
 
 
     </section>
-
+    <script src="https://www.gstatic.com/firebasejs/5.5.8/firebase.js"></script>
+    <script>
+        // Initialize Firebase
+        var config = {
+            apiKey: "AIzaSyA8FCZ2hs5QXUtGgLYPnLvOxrgFbkTJ4pc",
+            authDomain: "tankshooter888.firebaseapp.com",
+            databaseURL: "https://tankshooter888.firebaseio.com",
+            projectId: "tankshooter888",
+            storageBucket: "tankshooter888.appspot.com",
+            messagingSenderId: "145963884727"
+        };
+        firebase.initializeApp(config);
+    </script>
 
     <script type="text/javascript" src="app.js"></script>
     <script type="text/javascript" src="sketch.js"></script>
