--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
 <body>
     <section id="title">
         <div class=" container ">
-            <a class="float-right" id="logout">logout</a>
+            <a href="" class="float-right" id="logout">logout</a>
             <span class="">
                             <h1 style="padding-right: 22px">Tank Game </h1>
                             <p>Arrow keys to move, click to shoot!</p>
