--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,9 @@
 <body>
     <section id="title">
         <div class=" container ">
-            <a style="padding-left: 10px" class="float-right" id="account">account </a>
+            <a style="padding-left: 10px; display: none" class="float-right" id="account">account </a>
             <a style="padding-left: 10px" class="float-right" id="logout">logout</a>
+            <a style="padding-left: 10px;display: none" class="float-right" id="playgame">play game</a>
 
         </div>
         <br>
