--- a/public/login.html
+++ b/public/login.html
@@ -25,17 +25,14 @@
     <section id="authentication">
         <section id="login">
             <div class="loginmodal-container">
-                <h1>Login to Your Account</h1><br>
-                <form>
-                    <input id="aemail" type="email" name="loginuser" required placeholder="Email">
-                    <input id="apassword" type="password" name="loginpass" required placeholder="Password">
-                </form>
-                <input type="button" id="authenticate" name="login" id="newlogin" class="login loginmodal-submit" value="Login">
-
-
-                <div class="login-help">
-                    <a class="text-center lead" id="regbtn" href="#">Register</a>
-                </div>
+                <h1 id="titlesection">Login to Your Account</h1><br>
+                <section id="loginsection">
+                    <form>
+                        <input id="aemail" type="email" name="loginuser" required placeholder="Email">
+                        <input id="apassword" type="password" name="loginpass" required placeholder="Password">
+                    </form>
+                    <input type="button" id="authenticate" name="login" id="newlogin" class="login loginmodal-submit" value="Login">
+                </section>
             </div>
         </section>
 
