--- a/public/index.html
+++ b/public/index.html
@@ -24,10 +24,15 @@
 
 <body>
     <section id="title">
-        <div class=" container ">
-            <a style="padding-left: 10px; display: none" class="float-right" id="account">account </a>
-            <a style="padding-left: 10px" class="float-right" id="logout">logout</a>
-            <a style="padding-left: 10px;display: none" class="float-right" id="playgame">play game</a>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">BB TankShooter888</a>
+
+            <span class="navbar-text">
+                                <button class="btn btn-default" style="padding-left: 10px" class="float-right" id="logout">logout</button>
+                                <button class="btn btn-default" style="padding-left: 10px;display: none" class="float-right" id="playgame">play game</button>
+                                <button class="btn btn-danger" style="padding-left: 10px;display: none" class="float-right" id="surrender">Surrender</button>
+                            </span>
+        </nav>
 
         </div>
         <br>
